--- a/sql/metaApi.yml
+++ b/sql/metaApi.yml
@@ -2,10 +2,10 @@ getUsers: |
   select
     *
   from
-    metadb.users u
+    securitydb.users u
 
 createUser: |
-  INSERT INTO metadb.users (
+  INSERT INTO securitydb.users (
     first_name,
     last_name,
     email
@@ -17,7 +17,7 @@ createUser: |
   )
 
 cognitoUserToRDS: |
-  INSERT INTO metadb.cognitoUsers (
+  INSERT INTO securitydb.cognitoUsers (
     email,
     email_verified,
     datestamp,
